--- a/Frontend/BORDERLINE/app.json
+++ b/Frontend/BORDERLINE/app.json
@@ -19,12 +19,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
-    },
-    "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      },
+      "package": "com.anonymous.BORDERLINE"
     },
     "plugins": [
       "expo-router"
