fighting grid and styling

--- a/Frontend/BORDERLINE/app.json
+++ b/Frontend/BORDERLINE/app.json
@@ -23,7 +23,13 @@
       "package": "com.anonymous.BORDERLINE"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "expo-screen-orientation",
+        {
+          "initialOrientation": "DEFAULT"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
