--- a/Frontend/BORDERLINE/tsconfig.json
+++ b/Frontend/BORDERLINE/tsconfig.json
@@ -4,8 +4,9 @@
     "strict": true,
     "paths": {
       "@/*": [
-        "./*"
-      ]
+        "./*",
+        "src/*"
+      ],
     }
   },
   "include": [
